[gd_scene load_steps=20 format=3 uid="uid://cka07ytdwr5k"]

[ext_resource type="Texture2D" uid="uid://dq515pvoh74ux" path="res://Assets/Stranded 04 - Hero sprite/Without Sword (for gun)/hero sprite not sword.png" id="1_7cxbo"]
[ext_resource type="Script" uid="uid://csq8k1mf8ms14" path="res://Scripts/Player/PlayerController.gd" id="1_onjwh"]
[ext_resource type="Script" uid="uid://04oljwrnmqki" path="res://Scripts/GunController.gd" id="4_dewec"]
[ext_resource type="PackedScene" uid="uid://cfucnx3x5j005" path="res://Scenes/interaction_manager.tscn" id="4_h8f72"]
[ext_resource type="PackedScene" uid="uid://bcsttmeabd84b" path="res://Scenes/UI/ammos_ui.tscn" id="5_5ixxa"]
[ext_resource type="PackedScene" uid="uid://bkhifse31o6cs" path="res://Scenes/UI/status_ui.tscn" id="6_52ee3"]
[ext_resource type="PackedScene" uid="uid://di43fmlcdxrcw" path="res://Scenes/UI/ammo_bar.tscn" id="6_nn08x"]
[ext_resource type="Texture2D" uid="uid://ca2gdsglcw28r" path="res://Assets/light.png" id="8_bhhdu"]

[sub_resource type="Animation" id="Animation_qrnpa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xjd54"]
resource_name = "idle_down"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_d17ly"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_yjoue"]
resource_name = "idle_right"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_g404k"]
resource_name = "idle_up"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115]
}

[sub_resource type="Animation" id="Animation_7v7a5"]
resource_name = "run_down"
length = 0.64
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_6hiag"]
resource_name = "run_left"
length = 0.64
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [78, 79, 80, 81, 82, 83, 84, 85]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_w3c8x"]
resource_name = "run_right"
length = 0.64
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [78, 79, 80, 81, 82, 83, 84, 85]
}

[sub_resource type="Animation" id="Animation_1ly6q"]
resource_name = "run_up"
length = 0.64
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [130, 131, 132, 133, 134, 135, 136, 137]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cx36j"]
_data = {
&"RESET": SubResource("Animation_qrnpa"),
&"idle_down": SubResource("Animation_xjd54"),
&"idle_left": SubResource("Animation_d17ly"),
&"idle_right": SubResource("Animation_yjoue"),
&"idle_up": SubResource("Animation_g404k"),
&"run_down": SubResource("Animation_7v7a5"),
&"run_left": SubResource("Animation_6hiag"),
&"run_right": SubResource("Animation_w3c8x"),
&"run_up": SubResource("Animation_1ly6q")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_syuk4"]
radius = 8.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_onjwh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_7cxbo")
offset = Vector2(13, -1)
hframes = 13
vframes = 13
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cx36j")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_syuk4")
debug_color = Color(0.999729, 0, 0.10323, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="InteractionManager" parent="." instance=ExtResource("4_h8f72")]

[node name="BulletHolder" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="AmmosUI" parent="UI" instance=ExtResource("5_5ixxa")]
ammo_bar = ExtResource("6_nn08x")

[node name="StatusUI" parent="UI" instance=ExtResource("6_52ee3")]

[node name="GunController" type="Node2D" parent="." node_paths=PackedStringArray("bullet_holder")]
script = ExtResource("4_dewec")
bullet_holder = NodePath("../BulletHolder")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.45
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 50.0
texture = ExtResource("8_bhhdu")
texture_scale = 0.6

[node name="PointLight2D2" type="PointLight2D" parent="."]
color = Color(0.366811, 0.722161, 0.759827, 1)
energy = 0.25
shadow_filter = 1
shadow_filter_smooth = 50.0
texture = ExtResource("8_bhhdu")
